--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+//    id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.41'
 }
 
@@ -10,13 +10,26 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation(
+            'org.assertj:assertj-core:3.12.2',
+            'org.junit.jupiter:junit-jupiter-api:5.4.2'
+    )
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.3.41")
+    // console output decorator
+    implementation 'com.importre:crayon:0.1.0'
+    // program arguments parser
+    compile "com.xenomachina:kotlin-argparser:2.0.7"
 }
 
+test {
+    useJUnitPlatform()
+}
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
