--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation(
             'org.assertj:assertj-core:3.12.2',
-            'org.junit.jupiter:junit-jupiter-api:5.4.2'
+//            'org.junit.platform:junit-platform-launcher:1.7.0',
+            'org.junit.jupiter:junit-jupiter:5.7.0',
+//            'org.junit.jupiter:junit-jupiter-params:5.7.0'
     )
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.3.41")
