--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 //    id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
+    id 'org.jetbrains.kotlin.jvm' version '1.7.22'
 }
 
 group 'lesinski.mafrcin'
@@ -16,20 +16,20 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation(
-            'org.assertj:assertj-core:3.12.2',
+            'org.assertj:assertj-core:3.23.1',
 //            'org.junit.platform:junit-platform-launcher:1.7.0',
-            'org.junit.jupiter:junit-jupiter:5.7.0',
+            'org.junit.jupiter:junit-jupiter:5.9.0',
 //            'org.junit.jupiter:junit-jupiter-params:5.7.0'
     )
-    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+
     // kotlin reflection
-    implementation("org.jetbrains.kotlin:kotlin-reflect:1.3.41")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.22")
     // console output decorator
     implementation 'com.importre:crayon:0.1.0'
     // program arguments parser
-    compile "com.xenomachina:kotlin-argparser:2.0.7"
+    implementation "com.xenomachina:kotlin-argparser:2.0.7"
     // class graph
-    implementation "io.github.classgraph:classgraph:4.8.98"
+    implementation "io.github.classgraph:classgraph:4.8.151"
 }
 
 test {
