--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,22 @@ version '1.0'
 sourceCompatibility = 1.8
 
 repositories {
+    maven { url "https://maven.scijava.org/content/repositories/public/" }
     mavenCentral()
     jcenter()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    // kotlin reflection
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.22")
+    // console output decorator
+    implementation "com.importre:crayon:0.1.0"
+    // program arguments parser
+    implementation "com.xenomachina:kotlin-argparser:2.0.7"
+    // class graph
+    implementation "io.github.classgraph:classgraph:4.8.151"
+
     testImplementation(
             'org.assertj:assertj-core:3.23.1',
 //            'org.junit.platform:junit-platform-launcher:1.7.0',
@@ -22,14 +32,7 @@ dependencies {
 //            'org.junit.jupiter:junit-jupiter-params:5.7.0'
     )
 
-    // kotlin reflection
-    implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.22")
-    // console output decorator
-    implementation 'com.importre:crayon:0.1.0'
-    // program arguments parser
-    implementation "com.xenomachina:kotlin-argparser:2.0.7"
-    // class graph
-    implementation "io.github.classgraph:classgraph:4.8.151"
+
 }
 
 test {
